# wakfu-dptmeter

./: .gitignore  LICENSE.md  README.md  angular.json  package-lock.json  package.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: docker-publish-deploy.yml  tauri-build-analyze.yml  tauri-release.yml  tauri.yml
docs/: fight-tracking-business-logic.puml
docs/superpowers/specs/: 2026-07-20-fight-detection-design.md
src/: app.html
src-tauri/: Cargo.toml  fight_start_example.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: application.rs  fight_tracker.rs  lib.rs  log_parser.rs  log_watcher.rs  main.rs  pipeline.rs
src-tauri/src/adapter/: mod.rs
src-tauri/src/adapter/event/: emitter.rs  mod.rs
src-tauri/src/adapter/wakfu/log/: log_locator.rs  log_tailer.rs  log_watcher.rs  mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/fight/: mod.rs  model.rs  participants.rs  tracker.rs  turns.rs
src-tauri/src/domain/log_parsing/: mod.rs  model.rs  parser.rs
src-tauri/src/domain/parser/: constant.rs  line_parser.rs  mod.rs
src-tauri/src/infra/: fight_event_emitter.rs  mod.rs
src-tauri/src/infra/wakfu_log/: mod.rs  watcher.rs
src-tauri/src/log_watcher/: path.rs  tailer.rs
src-tauri/src/model/: fight.rs  fighter.rs  mod.rs
src-tauri/tests/: watch.rs
src/routes/: +page.svelte
src/utils/: const.ts
