[package]
name = "wakfu-dptmeter"
version = "0.1.0"
description = "Un compteur de dégats par tour pour le jeu Wakfu"
authors = ["poulpy2k"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wakfu_dptmeter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
notify = "9.0.0-rc.4"
notify-debouncer-mini = "0.7.0"
log = "0.4.33"
tauri-plugin-log = "2.9.0"
chrono = "0.4.45"
regex = "1.13.1"
thiserror = "2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[lints.rust]
future-incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -2 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
